@@ -1,3 +1,8 @@
+2015-11-08 Philipp Klaus Krause <pkk AT spth.de>
+
+	* support/regression/tests/string.c
+	  Separate C11 behaviour from implementation-defined behaviour.
+
 2015-11-07 Ben Shi <powerstudio1st AT 163 DOT com>
 
 	* src/SDCCglue.c:
